# variant_interpretation_copilot

./: .gitignore  Makefile  README.md  download_real_data.py  example.py  pyproject.toml  requirements.txt  setup.py
data/: common_variant.vcf  test.vcf
data/real/: 1000genomes_small.vcf  clinvar_small.vcf
tests/: __init__.py  test_parser.py  test_performance.py  test_scoring.py
vcf_copilot/: __init__.py  __main__.py  main.py  models.py  parser.py  report.py  scoring.py
vcf_copilot/annotators/: __init__.py  clinvar.py  engine.py  ensembl.py  gnomad.py
